8241742: Remove the preview status for methods introduced for Text Blocks
Reviewed-by: psandoz, chegar, alanb