@@ -23,10 +23,10 @@
 
 /*
  * @test
- * bug 8203444
+ * @bug 8203444
  * @summary Unit tests for instance versions of String#format
- * @compile --enable-preview -source ${jdk.version} Formatted.java
- * @run main/othervm --enable-preview Formatted
+ * @compile Formatted.java
+ * @run main Formatted
  */
 
 import java.util.Locale;
